# hidden-narrowing-news-recsys

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: domain-audit.yml
docs/: REAL_DATA_RUN.md
notebooks/: 01_data_audit.ipynb
reports/: domain_audit_summary.md  results_summary.md
scripts/: audit_domains.py  check_data_ready.py  download_mindsmall.py  make_plots.py  run_all.py  run_simulation.py  train_baseline.py  write_domain_audit_summary.py
src/hidden_narrowing/: __init__.py  baseline.py  config.py  data_helpers.py  data_mind.py  domain_audit_report.py  features.py  ideology.py  metrics.py  pipeline.py  plots.py  rerank.py  simulation.py
tests/: test_baseline_lr.py  test_bootstrap.py  test_data_helpers.py  test_domain_audit_report.py  test_metrics.py  test_mind_parser.py  test_real_data_workflow.py  test_rerank.py  test_run_all_e2e.py  test_simulation_and_plots.py  test_topic_profiles.py
tests/fixtures/: allsides_media_bias.csv  behaviors.tsv  news.tsv
